src/components/overview/Overview.css
.overview .container {
  padding: 1rem 0rem 2rem 0rem;
}

.overview-mobile .container {
  padding: 0rem 0rem 2rem 0rem;
}

.overview-wapper {
  margin-top: 1.2rem;
}

.overview-wapper-top {
  display: flex;
  margin: 1rem 0rem;
}

.overview-wapper-bottom {
  display: flex;
  margin: 1rem 0rem;
}

.overview-ml {
  margin-left: 0.8rem;
}

.overview-card {
  background-color: var(--color-forecasts-card);
  width: 100%;
  padding: 1rem 1.2rem;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.overview-details {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.time-stamp p {
  margin-top: 0px;
}

.date-stamp p {
  margin-top: 0px;
}

.time-stamp {
  background-color: var(--color-day-greydark);
  padding: 0.2rem 0.9rem;
  border-radius: 4px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.date-stamp {
  display: flex;
  align-items: center;
  justify-content: center;
}

.overview-text-indicator {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.overview-indicators {
  display: flex;
  justify-content: center;
  align-items: center;
}

.indicator {
  display: flex;
  justify-content: center;
  align-items: end;
}

.indicator p {
  margin-top: 0;
}

.indicator-long {
  color: var(--color-day-green);
  width: 14px;
  margin-right: 0.2rem;
}


.indicator-short {
  color: var(--color-day-red);
  width: 14px;
  margin-left: 1.4rem;
  margin-right: 0.2rem;
}

.percentage-wapper {
  margin-top: 0.8rem;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.percentage-long {
  background-color: #16c784de;
  width: 100%;
  padding: 0.6rem 0;
  border-bottom-left-radius: 6px;
  border-top-left-radius: 6px;
}

.percentage-short {
  background-color: #ff2e2edb;
  width: 100%;
  padding: 0.6rem 0;
  border-bottom-right-radius: 6px;
  border-top-right-radius: 6px;
}

.percentage-long p {
  margin-top: 0;
  text-align: center;
  color: white;
}

.percentage-long:hover {
  margin-right: 0.4rem;
  cursor: pointer;
  transition: all 0.5s ease;
}

.percentage-short:hover {
  margin-left: 0.4rem;
  cursor: pointer;
  transition: all 0.5s ease;
}

.percentage-short p {
  text-align: center;
  margin-top: 0;
  color: white;
  font-weight: 500;
}

.percentage-wapper-disable {
  width: 100%;
  background-color: rgba(128, 128, 128, 0.2);
  margin-top: 0.8rem;
  padding: 1.15rem;
  border-radius: 6px;
}

.over-view-description {
  text-align: justify;
}

@media screen and (max-width: 1188px) {
  .overview-details {
    flex-direction: column;
  }

  .time-stamp {
    margin-bottom: 0.5rem;
    padding: 0.2rem 0.5rem;
  }
}

@media screen and (max-width: 968px) {
  .time-stamp p {
    font-size: 10px;
    font-weight: 500;
  }

  .date-stamp p {
    font-size: 10px;
    font-weight: 500;
  }

  .percentage-long p {
    font-size: 10px;
    text-align: center;
  }

  .percentage-short p {
    font-size: 10px;
  }

  .overview-details {
    flex-direction: column;
  }

  .time-stamp {
    margin-bottom: 0.4rem;
  }
}

@media screen and (max-width: 775px) {
  .date-stamp button {
    display: none;
  }

  .date-stamp p {
    text-align: center;
  }
}

@media screen and (max-width: 568px) {
  .overview-wapper {
    display: flex;
    overflow-x: scroll;
    margin-top: 0.6rem;
    /* Hide scrollbar for IE, Edge and Firefox */
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  } 

  /* Hide scrollbar for Chrome, Safari and Opera */
  .overview-wapper::-webkit-scrollbar {
    display: none;
  }

  .overview-card {
    width: 220px;
  }

  .overview-details {
    flex-direction: row;
    align-items: baseline;
  }

  .overview-indicators {
    justify-content: end;
    margin-top: 0.8rem;
  }

  .overview-wapper-top {
    margin: 0rem 0rem 1rem 0rem;
  }
}


@media screen and (max-width: 568px) {
  .overview-mobile {
    display: flex;
    position: relative;
  }

  .overview-wapper {
    display: flex;
    overflow-x: scroll;
    margin-top: 0.6rem;
    /* Hide scrollbar for IE, Edge and Firefox */
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  } 

  /* Hide scrollbar for Chrome, Safari and Opera */
  .overview-wapper::-webkit-scrollbar {
    display: none;
  }

  .overview-card {
    width: 220px;
  }

  .overview-details {
    flex-direction: row;
  }

  .over-view-description {
    margin-top: 0.4rem;
  }

  .swipe-right-overview {
    position: absolute;
    right: 28px;
    top: 55%;
    width: 35px;
    height: 35px;
    z-index: 1000;
    border-radius: 50%;
    background-color: rgba(0, 0, 0, 0.75);
    display: flex;
    justify-content: center;
    align-items: center;
  }

}

